crates/tree-sitter-owl-ms/grammar.js
    source_file: $ => $._ontology_document,
    comment: _ => token(seq('#', /.*/)), // https://github.com/tree-sitter/tree-sitter-rust/blob/master/grammar.js

    // https://www.w3.org/TR/owl2-manchester-syntax/

    // 2.1 IRIs, Integers, Literals, and Entities
    // TODO create supertype
    iri: $ => choice($.full_iri, $.abbreviated_iri, $.simple_iri),
    full_iri: $ => token(seq('<', iri_rfc3987(), '>')),
    abbreviated_iri: $ => $._pname_ln,
    simple_iri: $ => $._pn_local,
    prefix_name: $ => /([A-Za-z][A-Za-z0-9_\-\.]*)?:/,

    _datatype: $ =>
      choice(
        $.keyword_integer,
        $.keyword_decimal,
        $.keyword_float,
        $.keyword_string,
        $.datatype_iri,
      ),

    // Iri Types
    ontology_iri: $ => $.iri,
    version_iri: $ => $.iri,

    // Typical frame IRIs
    datatype_iri: $ => $.iri,
    class_iri: $ => $.iri,
    annotation_property_iri: $ => $.iri,
    data_property_iri: $ => $.iri,
    object_property_iri: $ => $.iri,
    individual_iri: $ => $.iri,

    //  What the hell is this rule?
    // annotation_property_iri_annotated_list: $ => $.iri,

    _individual: $ => choice($.individual_iri, $.node_id),
    non_negative_integer: $ => choice(_zero(), _positive_integer()),

    string_literal_no_language: $ => $._quoted_string,
    integer_literal: $ => token(seq(optional(choice('+', '-')), _digits())),
    _quoted_string: $ => /"([^"\\]|\\\\|\\")*"/,
    _ontology_document: $ =>
      seq(
        field('prefix', repeat($.prefix_declaration)),
        field('ontology', $.ontology),
      ),
    prefix_declaration: $ => seq($.keyword_prefix, $.prefix_name, $.full_iri),

    ontology: $ =>
      seq(
        $.keyword_ontology,
        optional(
          seq(
            field('iri', $.ontology_iri),
            optional(field('version_iri', $.version_iri)),
          ),
        ),
        field('import', repeat($.import)),
        field('annotations', repeat($.annotations)),
        field('frame', repeat($._frame)),
      ),

    import: $ => seq($.keyword_import, $.iri),

    // TODO create supertype
    _frame: $ =>
      choice(
        $.datatype_frame,
        $.class_frame,
        $.object_property_frame,
        $.data_property_frame,
        $.annotation_property_frame,
        $.individual_frame,
        $._misc,
      ),

    annotations: $ => seq($.keyword_annotations, $._annotation_annotated_list),

    annotation: $ => seq($.annotation_property_iri, $._annotation_target),
    _annotation_target: $ => choice($.iri, $._literal, $.node_id),

    // 2.3  Property and Datatype Expressions
    data_range: $ => sep1($._data_conjunction, 'or'),
    _data_conjunction: $ => sep1($._data_primary, 'and'),
    datatype_restriction: $ =>
      seq(
        $._datatype,
        '[',
        sep1(seq($._facet, $._restriction_value), ','),
        ']',
      ),

    _facet: $ =>
      choice(
        $.keyword_length,
        $.keyword_min_length,
        $.keyword_max_length,
        $.keyword_pattern,
        $.keyword_lang_range,
        '<=',
        '<',
        '>=',
        '>',
      ),

    _restriction_value: $ => $._literal,

    // 2.4 Descriptions
    description: $ => sep1($.conjunction, 'or'),

    conjunction: $ =>
      choice(
        seq(
          $.class_iri,
          'that',
          optional('not'),
          $._restriction,
          repeat(seq('and', optional('not'), $._restriction)),
        ),
        sep1($.primary, 'and'),
      ),

    primary: $ => seq(optional('not'), choice($._restriction, $._atomic)),

    _restriction: $ =>
      choice(
        seq($._object_property_expression, $.keyword_some, $.primary),
        seq($._data_property_expression, $.keyword_some, $._data_primary),
        seq($._object_property_expression, $.keyword_only, $.primary),
        seq($._data_property_expression, $.keyword_only, $._data_primary),
        seq($._object_property_expression, $.keyword_self),
        seq(
          $._object_property_expression,
          'min',
          $.non_negative_integer,
          optional($.primary),
        ),
        seq(
          $._data_property_expression,
          'min',
          $.non_negative_integer,
          optional($._data_primary),
        ),
        seq(
          $._object_property_expression,
          'max',
          $.non_negative_integer,
          optional($.primary),
        ),
        seq(
          $._data_property_expression,
          'max',
          $.non_negative_integer,
          optional($._data_primary),
        ),
        seq(
          $._object_property_expression,
          'exactly',
          $.non_negative_integer,
          optional($.primary),
        ),
        seq(
          $._data_property_expression,
          'exactly',
          $.non_negative_integer,
          optional($._data_primary),
        ),
        seq($._object_property_expression, $.keyword_value, $._individual),
        seq($._data_property_expression, $.keyword_value, $._literal),
      ),

    _atomic: $ =>
      choice(
        $.class_iri,
        seq('{', $._individual_list, '}'),
        $.nested_description,
      ),

    nested_description: $ => seq('(', $.description, ')'),

    // 2.5 Frames and Miscellaneous

    datatype_frame: $ =>
      seq(
        $.keyword_datatype,
        field('iri', $._datatype),
        repeat($.annotations),
        optional(seq($.datatype_equavalent_to, repeat($.annotations))),
      ),

    datatype_equavalent_to: $ =>
      seq($.keyword_equivalent_to, optional($.annotations), $.data_range),

    class_frame: $ =>
      seq(
        $.keyword_class,
        field('iri', $.class_iri),
        repeat(
          choice(
            $.annotations,
            $.sub_class_of,
            $.class_equivalent_to,
            $.class_disjoint_with,
            $.disjoint_union_of,
            $.has_key,
          ),
        ),
      ),

    sub_class_of: $ =>
      seq($.keyword_sub_class_of, $._description_annotated_list),

    object_property_frame: $ =>
      seq(
        $.keyword_object_property,
        field('iri', $.object_property_iri),
        repeat(
          choice(
            $.annotations,
            $.domain,
            $.range,
            $.sub_property_of,
            $.object_property_equivalent_to,
            $.object_property_disjoint_with,
            $.inverse_of,
            $.characteristics,
            $.sub_property_chain,
          ),
        ),
      ),

    data_property_frame: $ =>
      seq(
        $.keyword_data_property,
        field('iri', $.data_property_iri),
        repeat(
          choice(
            $.annotations,
            $.data_property_domain,
            $.data_property_range,
            $.data_property_characteristics,
            $.data_property_sub_property_of,
            $.data_property_equivalent_to,
            $.data_property_disjoint_with,
          ),
        ),
      ),

    // TODO hier weiter machen mit den keywords!

    annotation_property_frame: $ =>
      seq(
        $.keyword_annotation_property,
        field('iri', $.annotation_property_iri),
        repeat(
          choice(
            $.annotations,
            $.annotation_property_domin,
            $.annotation_property_range,
            $.annotation_property_sub_property_of,
          ),
        ),
      ),

    individual_frame: $ =>
      seq(
        $.keyword_individual,
        field('iri', $._individual),
        repeat(
          choice(
            $.annotations,
            $.individual_types,
            $.individual_facts,
            $.individual_same_as,
            $.individual_different_from,
          ),
        ),
      ),

    individual_facts: $ => seq($.keyword_facts, $._fact_annotated_list),

    fact: $ =>
      seq(
        optional('not'),
        // _data_property_fact should have higher prec, because pn_local does accept leadign
        // digit, therefore just a number is a valid IRI :'>
        choice(prec(1, $._data_property_fact), $._object_property_fact),
      ),
    _object_property_fact: $ => seq($.object_property_iri, $._individual),
    _data_property_fact: $ => seq($.data_property_iri, $._literal),

    _description_annotated_list: $ =>
      annotated_list($.annotations, $.description),
    _annotation_annotated_list: $ =>
      annotated_list($.annotations, $.annotation),
    _fact_annotated_list: $ => annotated_list($.annotations, $.fact),

    // List2
    _pname_ln: $ => token(seq(pname_ns(), pn_local())), // old= /[A-Za-z0-9_\-\.]*:[A-Za-z0-9_\-\.]+/,
    // _pn_prefix: $ => /[A-Za-z0-9_\-\.]+/,
    // _pname_ln: $ => seq(optional($._pn_prefix), ':', $._pn_local),

    _pn_local: $ => token(pn_local()),

    // Keywords

    keyword_prefix: $ => 'Prefix:',
    keyword_ontology: $ => 'Ontology:',
    keyword_integer: $ => 'integer',
    keyword_float: $ => 'float',
    keyword_string: $ => 'string',
    keyword_import: $ => 'Import:',
    keyword_annotations: $ => 'Annotations:',
    keyword_inverse: $ => 'inverse',
    keyword_length: $ => 'length',
    keyword_some: $ => 'some',
    keyword_datatype: $ => 'Datatype:',
    keyword_equivalent_to: $ => 'EquivalentTo:',
    keyword_class: $ => 'Class:',
    keyword_sub_class_of: $ => 'SubClassOf:',
    keyword_object_property: $ => 'ObjectProperty:',
    keyword_individual: $ => 'Individual:',
    keyword_facts: $ => 'Facts:',
