crates/tree-sitter-owl-ms/test/corpus/statements.txt
===================
Full IRI
===================

Ontology: <http://www.semanticweb.org/janek/ontologies/2023/9/untitled-ontology-3> 

---

(source_file
	(ontology
	    (keyword_ontology)
		(ontology_iri (full_iri))))

===================
Simple IRI utf-8
===================

Ontology: Ⰰﷵ

---

(source_file
	(ontology
	    (keyword_ontology)
		(ontology_iri (simple_iri))))

===================
Simple IRI utf-8 fail on [
:error
===================

Ontology: [

---

===================
Simple IRI utf-8 fail on <
:error
===================

Ontology: <

---


===================
Prefix Declaration
===================

Prefix: owl: <http://www.w3.org/2002/07/owl#>
Prefix: rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>

Ontology:

---

(source_file
	(prefix_declaration (keyword_prefix) (prefix_name) (full_iri))
	(prefix_declaration (keyword_prefix) (prefix_name) (full_iri))
	(ontology
	    (keyword_ontology)))


===================
Literal String
===================

Ontology:
	Class: Person
	Annotations: comment "General domain"

---

(source_file
	(ontology
	    (keyword_ontology)
	    (class_frame 
  			(keyword_class)
  			(class_iri (simple_iri))
		  (annotations
	          (keyword_annotations)
	          (annotation
	    				(annotation_property_iri (simple_iri))
	    				(string_literal_no_language (quoted_string)))))))

===================
Datatype Frame integer
===================

Ontology:
	Datatype: integer

---

(source_file 
	(ontology
	    (keyword_ontology)
		(datatype_frame 
		  (keyword_datatype)
			(keyword_integer))))


===================
Datatype Frame IRI
===================

Ontology:
	Datatype: NegInt

---

(source_file 
	(ontology
	    (keyword_ontology)
		(datatype_frame 
		  (keyword_datatype)
			(datatype_iri (simple_iri)))))

===================
Datatype Frame Annotations
===================

Ontology:
	Datatype: 
		integer
		Annotations: creator God

---

(source_file
	(ontology
	    (keyword_ontology)
		(datatype_frame 
			(keyword_datatype)
			(keyword_integer)
	    (annotations
		(keyword_annotations)
	        (annotation
	        	(annotation_property_iri (simple_iri))
	        	(simple_iri))))))

===================
Datatype Frame EquivalentTo
===================

Ontology:
	Datatype: NegInt
		EquivalentTo:
			Annotations: creator God
			integer[< 0]

---

(source_file
	(ontology
	    (keyword_ontology)
			(datatype_frame 
			  (keyword_datatype)
				(datatype_iri (simple_iri))
				(datatype_equavalent_to
				  (keyword_equivalent_to)
				(annotations
				  (keyword_annotations)
		          (annotation
					(annotation_property_iri (simple_iri))
		            (simple_iri)))
          (data_range
              (datatype_restriction
                (keyword_integer)
                ; Seems like mutch information is not named here
                (integer_literal)))))))

===================
Datatype Frame EquivalentTo Complex
===================

Ontology:
	Datatype: NegInt
		EquivalentTo:
			integer[< 0] or float and string[length 8]

---

(source_file
      (ontology
	    (keyword_ontology)
        (datatype_frame
          (keyword_datatype)
          (datatype_iri
            (simple_iri))
          (datatype_equavalent_to
            (keyword_equivalent_to)
            (data_range
              (datatype_restriction
                (keyword_integer)
                (integer_literal))
              (keyword_float)
              (datatype_restriction
                (keyword_string)
                (keyword_length)
                (integer_literal)))))))

===================
Class Frame IRI
===================

Ontology:
	Class: Person

---

(source_file
	(ontology
	    (keyword_ontology)
			(class_frame 
			  (keyword_class)
				(class_iri
					(simple_iri)))))

======================
Class Frame SubClassOf
======================

Ontology:
	Class: Person
		SubClassOf: owl:Thing

-------------------------------------

(source_file
	(ontology
	    (keyword_ontology)
		(class_frame
			(keyword_class)
			(class_iri (simple_iri))
			(sub_class_of
			  (keyword_sub_class_of)
				(description
				  (conjunction
				    (primary
					  (class_iri
                        (abbreviated_iri)))))))))

===================
Class Frame SubClassOf with List
:skip
===================

Ontology:
	Class: Person
		SubClassOf:
			owl:Thing,Human

---

(source_file 
	(ontology
	    (keyword_ontology)
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction (primary (atomic
							(iri (abbreviated_iri))))))

					(description
						(conjunction (primary (atomic
							(iri (simple_iri)))))))))))

===================
Class Frame SubClassOf with Annotations
:skip
===================

Ontology:
	Class: Person
		SubClassOf:
			owl:Thing,
				Annotations: creator God
			Human

---

(source_file
	(ontology
	    (keyword_ontology)
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction (primary (atomic
							(iri (abbreviated_iri))))))

					(annotations (annotation_annotated_list 
						(annotation 
							(iri (simple_iri))
							(annotation_target (iri (simple_iri))))))
					(description
						(conjunction (primary (atomic
							(iri (simple_iri)))))))))))


===================
Class Frame SubClassOf with Conjunction
:skip
===================

Ontology:
	Class: Person
		SubClassOf: hasAge exactly 1 and hasAge only not NegInt

---

(source_file
	(ontology
	    (keyword_ontology)
		(frame 
			(class_frame 
				(iri
					(simple_iri))
				(description_annotated_list
					(description
						(conjunction 
							(primary (restriction 
								(data_property_expression (iri (simple_iri)))
								(non_negative_integer)))
							(primary (restriction 
								(data_property_expression (iri (simple_iri)))
								(primary (atomic (iri (simple_iri)))))))))))))



===================
Class Frame Complex
:skip
===================

Ontology:
  Class: Person
    Annotations: foo bar
    SubClassOf: owl:Thing that hasFirstName exactly 1 and hasFirstName only string[minLength 1]  
    SubClassOf: hasAge exactly 1 and hasAge only not NegInt
    SubClassOf: hasGender exactly 1 and hasGender only {female , male} 
    SubClassOf: hasSSN max 1, hasSSN min 1
    SubClassOf: not hates Self
    EquivalentTo: g:People
    DisjointWith: g:Rock , g:Mineral 
    DisjointUnionOf: Annotations: foo bar Child, Adult
    HasKey: Annotations: foo bar hasSSN

---



===================
Object Property
:skip
===================

Ontology:
	  ObjectProperty: hasWife
---

(source_file
        (ontology
	    (keyword_ontology)
          (frame
            (object_property_frame
              (iri
                (simple_iri))))))

===================
Object Property Annotations
:skip
===================

Ontology:
	  ObjectProperty: hasWife
	    Annotations: creator God
---

(source_file
        (ontology
	    (keyword_ontology)
          (frame
            (object_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))))))

===================
Object Property Domain
:skip
===================

Ontology:
	  ObjectProperty: hasWife
	    Domain: Person, Man
---
(source_file
    (ontology
	    (keyword_ontology)
      (frame
        (object_property_frame
          (iri
            (simple_iri))
          (description_annotated_list
            (description
              (conjunction
                (primary
                  (atomic
                    (iri
                      (simple_iri))))))
            (description
              (conjunction
                (primary
                  (atomic
                    (iri
                      (simple_iri)))))))))))

===================
Object Property Characteristics
:skip
===================

Ontology:
	  ObjectProperty: hasWife
			Characteristics: Functional, InverseFunctional, Reflexive, Irreflexive, Asymmetric, Transitive
---

(source_file
    (ontology
	    (keyword_ontology)
      (frame
        (object_property_frame
          (iri
            (simple_iri))
          (object_property_characteristic_annotated_list
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic)
            (object_property_characteristic))))))

===================
Object Property Complex
:skip
===================

Ontology:
	  ObjectProperty: hasWife
	    Annotations: creator God
			Characteristics: Functional, InverseFunctional, Reflexive, Irreflexive, Asymmetric, Transitive
	    Domain: Annotations: rdfs:comment "General domain",
	                         creator John
	              Person,
	            Annotations: rdfs:comment "More specific domain"
	              Man
	    Range: Person, Woman
	    SubPropertyOf: hasSpouse, loves
	    EquivalentTo: isMarriedTo , andOther
	    DisjointWith: hates , andOther
	    InverseOf: hasSpouse, inverse hasSpouse
	    SubPropertyChain: Annotations: foo bar hasChild o hasParent o hasOther
---

(source_file
        (ontology
	    (keyword_ontology)
          (frame
            (object_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (object_property_characteristic_annotated_list
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic)
                (object_property_characteristic))
              (description_annotated_list
                (annotations
                  (annotation_annotated_list
                    (annotation
                      (iri
                        (abbreviated_iri))
                      (annotation_target
                        (literal)))
                    (annotation
                      (iri
                        (simple_iri))
                      (annotation_target
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (annotations
                  (annotation_annotated_list
                    (annotation
                      (iri
                        (abbreviated_iri))
                      (annotation_target
                        (literal)))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (description_annotated_list
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (iri
                    (simple_iri))))
              (object_property_expression_annotated_list
                (object_property_expression
                  (iri
                    (simple_iri)))
                (object_property_expression
                  (inverse_object_property
                    (iri
                      (simple_iri)))))
              (annotations
                (annotation_annotated_list
                  (annotation
                    (iri
                      (simple_iri))
                    (annotation_target
                      (iri
                        (simple_iri))))))
              (object_property_expression
                (iri
                  (simple_iri)))
              (object_property_expression
                (iri
                  (simple_iri)))
              (object_property_expression
                (iri
                  (simple_iri)))))))

===================
Data Property Complex
:skip
===================

Ontology:
  DataProperty: hasAge
    Annotations: foo Bar
    Characteristics: Annotations: foo bar Functional
    Domain: Person, Foo
    Range: integer , float
    SubPropertyOf: hasVerifiedAge , hasOther
    EquivalentTo: hasAgeInYears ,hasOther
    DisjointWith: hasSSN ,hasOther

---

(source_file
        (ontology
	    (keyword_ontology)
          (frame
            (data_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (annotations
                (annotation_annotated_list
                  (annotation
                    (iri
                      (simple_iri))
                    (annotation_target
                      (iri
                        (simple_iri))))))
              (description_annotated_list
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri))))))
                (description
                  (conjunction
                    (primary
                      (atomic
                        (iri
                          (simple_iri)))))))
              (data_range_annotated_list
                (data_range
                  (data_conjunction
                    (data_primary
                      (data_atomic
                        (datatype)))))
                (data_range
                  (data_conjunction
                    (data_primary
                      (data_atomic
                        (datatype))))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri))))
              (data_property_expression_annotated_list
                (data_property_expression
                  (iri
                    (simple_iri)))
                (data_property_expression
                  (iri
                    (simple_iri))))))))


===================
Annotation Property Complex
:skip
===================

Ontology:
  AnnotationProperty: creator
    Annotations: foo bar
    Domain: Person , Other
    Range: integer , float
    SubPropertyOf: initialCreator , other

---

(source_file
        (ontology
	    (keyword_ontology)
          (frame
            (annotation_property_frame
              (iri
                (simple_iri))
              (annotation_annotated_list
                (annotation
                  (iri
                    (simple_iri))
                  (annotation_target
                    (iri
                      (simple_iri)))))
              (iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri)))
              (iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri)))
              (annotation_property_iri_annotated_list
                (iri
                  (simple_iri))
                (iri
                  (simple_iri)))))))

===================
Individual Complex
:skip
===================

Ontology:
  Individual: John
    Annotations: foo bar
    Types: Person , hasFirstName value "John" or hasFirstName value "Jack"^^xsd:string
    Facts: hasWife Mary, not hasChild Susan, hasAge 33, hasChild _:child1
    SameAs: Jack , John2
    DifferentFrom: Susan ,Susan2
---

===================
Comment
===================

	# Comment
Ontology: # Comment
# Comment
  Individual: John # Comment
	# Comment

---
(source_file
  (comment)
  (ontology
	    (keyword_ontology)
	(comment)
	(comment)
    (individual_frame
      (keyword_individual)
      (individual_iri
        (simple_iri))))
  (comment)
  (comment))

====================
Imports
====================

Ontology: <http://foobar.org/ontology/> <http://foobar.org/ontology.omn>
Import: <http://external.org/shared.omn>

---

(source_file
  (ontology
	    (keyword_ontology)
    (ontology_iri
      (full_iri))
    (version_iri
      (full_iri))
    (import
	    (keyword_import)
      (full_iri))))

==============
Complex class expression
==============


Prefix: : <https://example.com/ontology#>

Ontology:

ObjectProperty: p
Class: A
Class: B
Class: C
    SubClassOf: p some (A and B)
    SubClassOf: inverse p some (A and B)
    # SubClassOf: (p) some A and B this is invalid
    SubClassOf: inverse p some A and B
---

(source_file
  (prefix_declaration
    (keyword_prefix)
    (prefix_name)
    (full_iri))
  (ontology
    (keyword_ontology)
    (object_property_frame
      (keyword_object_property)
      (object_property_iri
        (simple_iri)))
    (class_frame
      (keyword_class)
      (class_iri
        (simple_iri)))
    (class_frame
      (keyword_class)
      (class_iri
        (simple_iri)))
    (class_frame
      (keyword_class)
      (class_iri
        (simple_iri))
      (sub_class_of
        (keyword_sub_class_of)
        (description
          (conjunction
            (primary
              (object_property_iri
                (simple_iri))
              (keyword_some)
              (primary
                (nested_description
                  (description
                    (conjunction
                      (primary
                        (class_iri
                          (simple_iri)))
                      (primary
                        (class_iri
                          (simple_iri)))))))))))
      (sub_class_of
        (keyword_sub_class_of)
        (description
          (conjunction
            (primary
              (keyword_inverse)
              (object_property_iri
                (simple_iri))
              (keyword_some)
              (primary
                (nested_description
                  (description
                    (conjunction
                      (primary
                        (class_iri
                          (simple_iri)))
                      (primary
                        (class_iri
                          (simple_iri)))))))))))
      (comment)
      (sub_class_of
        (keyword_sub_class_of)
        (description
          (conjunction
            (primary
              (keyword_inverse)
              (object_property_iri
                (simple_iri))
              (keyword_some)
              (primary
                (class_iri
                  (simple_iri))))
            (primary
              (class_iri
                (simple_iri)))))))))


==================
Numbers in facts should parse as literal
==================
Ontology: X
Individual: Y
    Facts: learnFrom Alice, hasAge 16
---
(source_file
  (ontology
    (keyword_ontology)
    (ontology_iri
      (simple_iri))
    (individual_frame
      (keyword_individual)
      (individual_iri
        (simple_iri))
      (individual_facts
        (keyword_facts)
        (fact
          (object_property_iri
            (simple_iri))
          (individual_iri
            (simple_iri)))
        (fact
          (data_property_iri
            (simple_iri))
          (integer_literal))))))
